etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow udp 1714:1764 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 1714:1764 -j ACCEPT

### tuple ### allow tcp 1714:1764 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 1714:1764 -j ACCEPT

### tuple ### allow udp 1716 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 1716 -j ACCEPT

### tuple ### allow any 8080 0.0.0.0/0 any 192.168.1.0/24 in
-A ufw-user-input -p tcp --dport 8080 -s 192.168.1.0/24 -j ACCEPT
-A ufw-user-input -p udp --dport 8080 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow any 8080 0.0.0.0/0 any 192.168.1.0/24 out
-A ufw-user-output -p tcp --dport 8080 -s 192.168.1.0/24 -j ACCEPT
-A ufw-user-output -p udp --dport 8080 -s 192.168.1.0/24 -j ACCEPT

### END RULES ###

### LOGGING ###
-I ufw-user-logging-input -j RETURN
-I ufw-user-logging-output -j RETURN
-I ufw-user-logging-forward -j RETURN
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
